# head-count

./: .gitignore  Cargo.toml  README.md  package-lock.json
.github/workflows/: build_release.yml  (+5 more)
cloudrun-server/: deploy.sh  package.json
docs/: CNAME  index.html
migrationtool/: database.db  index.js  package-lock.json  package.json
sensor/: Cargo.toml
sensor/azure/function/: host.json
sensor/azure/function/a_static/: function.json
sensor/azure/function/client/: function.json
sensor/azure/function/files/: function.json
sensor/azure/function/health/: function.json
sensor/azure/function/location/: function.json
sensor/azure/function/static/: function.json
sensor/azure/scripts/: github-action-credentials
sensor/azure/static/: function.json
sensor/src/: lib.rs  main.rs
sensor/src/app/: heartbeat.rs  mod.rs
sensor/src/handler/: count.rs  error.rs  health.rs  heartbeat.rs  mod.rs
sensor/src/models/: count.rs  database.rs  heartbeat.rs  mod.rs  request.rs
sensor/src/store/: mod.rs  retry_upload.rs
sensor/store/: 1674584391937
sensor/tests/: integration_test.rs
sensor/views/src/client/: dashboard.ts  export.ts
sensor/views/src/client/modules/: dashboardHelper.ts  database.ts
sensor/views/src/views/: dashboard.html  monitor.html  status.html
server/: database.db  deploy.sh  nodemon.json  package-lock.json  package.json
signal-test/: app.ts  package-lock.json  package.json
src/: lib.rs  main.rs
tests/: integration_test.rs
views/: package-lock.json  package.json  tsconfig.json  webpack.config.js
workflows/: release.yml
(+66 files in other folders)
