[package]
name = "sensor"
version = "0.1.0"
edition = "2021"

[lib]
name = "sensor_lib"
path = "src/lib.rs"

[dependencies]
axum = "0.6.1"
tokio = { version = "1.24.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
postgrest = "1.3.2"
chrono = "0.4.23"
